correct padding-top => content on mobile

--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -1,5 +1,5 @@
 .primary-nav {
-  padding-top: 10px;
+  padding-top: 15px;
 
   @mixin atMedium {
     padding-top: 0;
